# kofinance

./: .gitignore  README.md  pyproject.toml
content/: blog-pykrx-alternative.md  financial-analysis-example.ipynb  migration-guide.md  pykrx-migration-guide.md
content/examples/: samsung-financial-analysis.ipynb
docs/: authentication.md  endpoints.md  errors.md  index.md  rate-limits.md
examples/: quickstart.py
kofinance/: __init__.py  client.py  exceptions.py  models.py
sdk/: LICENSE  README.md  pyproject.toml
sdk/kofinance/: __init__.py  client.py  exceptions.py
