[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kofinance"
version = "0.1.0"
description = "한국 금융 데이터 API - Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
