[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kofinance"
version = "0.1.0"
description = "한국 금융 데이터 API - Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "KoFinance Team", email = "dev@ntriq.co.kr" },
]
keywords = ["korea", "finance", "stock", "financial-data", "kospi", "kosdaq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.24.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx", "ruff"]

[project.urls]
Homepage = "https://kofinance.ntriq.co.kr"
Documentation = "https://kofinance.ntriq.co.kr/docs"
Repository = "https://github.com/ntriq/kofinance-python"
